--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -162,6 +162,24 @@
         />
       </div>
     </section>
+    <section class="video-banner">
+      <video autoplay muted loop class="background-video">
+          <source src="/static/videos/background-video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+      <div class="content">
+          <p class="tagline">IN FOCUS</p>
+          <h1>Climate change is here. But we are fighting back.</h1>
+          <p class="description">
+              With the FAO Strategy on Climate Change and its Action Plan, we are taking steps to build a better future for all.
+          </p>
+          <div class="buttons">
+              <button class="btn">🌍 Interactive story</button>
+              <button class="btn">📘 Climate Change</button>
+              <button class="btn">📖 FAO at COP29</button>
+          </div>
+      </div>
+  </section>
     <!-- what we offer -->
     <section class="what-we-offer">
       <div class="container">
@@ -249,7 +267,7 @@
             <h3>Get In Touch</h3>
             <form>
               <input type="email" placeholder="Email Address" required />
-              <button type="submit">send me email</button>
+              <button type="submit">send me</button>
             </form>
             <!-- Social Media Icons -->
             <div class="social-icons">
