--- a/templates/index.html
+++ b/templates/index.html
@@ -195,6 +195,20 @@
         </div>
       </div>
     </section>
+    <section class="counting-section">
+      <div class="counter-container">
+          <div class="counter" id="counter1">0</div>
+          <h3>Students</h3>
+      </div>
+      <div class="counter-container">
+          <div class="counter" id="counter2">0</div>
+          <h3>Successful Mentorship</h3>
+      </div>
+      <div class="counter-container">
+          <div class="counter" id="counter3">0</div>
+          <h3>Different Courses</h3>
+      </div>
+  </section>
 
     <!-- footer start -->
 
@@ -240,7 +254,7 @@
             <h3>Get In Touch</h3>
             <form>
               <input type="email" placeholder="Email Address" required />
-              <button type="submit">send me email</button>
+              <button type="submit">send me</button>
             </form>
             <!-- Social Media Icons -->
             <div class="social-icons">
