--- a/static/css/apply.css
+++ b/static/css/apply.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #606c38; /* Blue */
-  --secondary-color: #283618; /* */
+  --primary-color: #edede9; /* Blue */
+  --secondary-color: #d6ccc2; /* */
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playwrite+DE+Grund:wght@100..400&display=swap");
@@ -22,7 +22,7 @@ body {
   align-items: center;
   padding: 1rem;
   background-color: var(--primary-color);
-  color: white;
+  color: black;
   position: fixed; /* Fixed at the top of the page */
   top: 0;
   left: 0;
@@ -41,7 +41,7 @@ body {
 }
 
 .nav-links a {
-  color: white;
+  color: black;
   text-decoration: none;
   padding: 0.5rem 2rem;
   border-radius: 5px;
@@ -64,7 +64,7 @@ body {
 .toggle-menu div {
   width: 25px;
   height: 3px;
-  background-color: white;
+  background-color: black;
   margin: 4px;
 }
 
@@ -107,12 +107,13 @@ body {
 /* Apply Section Styles */
 /* Apply Section Styles */
 .apply-section {
-  background-color: #606c38; /* Light background for contrast */
+  background-color: var(--secondary-color); /* Light background for contrast */
   padding: 40px;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 600px;
   margin: 20px auto; /* Center the section */
+  margin-top: 50px;
 }
 
 /* Heading Style */
@@ -120,7 +121,7 @@ body {
   text-align: center;
   margin-bottom: 20px;
   font-family: "Arial", sans-serif;
-  color: white; /* Darker text color */
+  color: black; /* Darker text color */
 }
 
 /* Form Group Styles */
@@ -132,7 +133,7 @@ body {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: white; /* Medium dark color */
+  color: black; /* Medium dark color */
 }
 
 .apply-form-group input,
@@ -152,19 +153,19 @@ body {
 
 /* Submit Button Styles */
 #apply-submit-button {
-  background-color: #283618;
-  color: white;
+  background-color: var(--primary-color);
+  color: black;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s, transform 0.2s; /* Add transition effects */
-  width: 100%; /* Full width button */
+  width: 40%; /* Full width button */
 }
 
 #apply-submit-button:hover {
-  background-color: #606c38; /* Darker blue on hover */
+  background-color: var(--secondary-color);
   transform: translateY(-2px); /* Slight lift effect */
 }
 
@@ -182,7 +183,7 @@ body {
 /* footer start */
 .footer {
   background-color: var(--secondary-color); /* Dark Blue background */
-  color: white;
+  color: black;
   padding: 2rem 1rem;
   font-family: Arial, sans-serif;
   animation: fadeInFooter 1.5s ease-in-out; /* Added animation */
@@ -229,13 +230,13 @@ body {
 }
 
 .footer-column ul li a {
-  color: white;
+  color: black;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 .footer-column ul li a:hover {
-  color: var(--primary-color); /* Secondary color */
+  color: var(--primary-color);
 }
 
 .newsletter input[type="email"] {
@@ -243,7 +244,11 @@ body {
   border: none;
   border-radius: 5px;
   margin-right: 1rem;
-  width: 60%;
+  width: 80%;
+}
+.email {
+  color: black;
+  width: 50%;
 }
 
 .newsletter button {
@@ -251,7 +256,7 @@ body {
   border: none;
   border-radius: 5px;
   background-color: var(--primary-color); /* Button color */
-  color: white;
+  color: black;
   cursor: pointer;
 }
 
@@ -264,14 +269,14 @@ body {
 }
 
 .social-icons a {
-  color: white;
+  color: black;
   font-size: 1.5rem;
   margin-right: 15px;
   transition: color 0.3s ease;
 }
 
 .social-icons a:hover {
-  color: var(--primary-color); /* Secondary color for hover */
+  color: var(--primary-color);
 }
 
 .contact-info p {
@@ -285,3 +290,57 @@ body {
   padding-top: 1rem;
 }
 /* footer end */
+
+/* log out styling */
+
+.upload-container {
+  text-align: center;
+  background-color: var(--primary-color);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+h2.upload-container {
+  margin-bottom: 15px;
+}
+.image-preview {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 auto 15px;
+  border: 2px dashed var(--secondary-color);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-preview img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.hidden {
+  display: none;
+}
+.custom-file-label {
+  display: inline block;
+  padding: 10px 20px;
+  background-color: var(--secondary-color);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+.custom-file-label:hover {
+  background-color: #606c38;
+}
+.input-profile {
+  display: none;
+}
+/* input[type="file"] {
+  display: none;
+} */
