--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1546,3 +1546,54 @@ h1 {
     border-radius: 0; /* Remove rounded corners for stacked layout */
   }
 }
+
+/* log out styling */
+
+.upload-container {
+  text-align: center;
+  background-color: var(--primary-color);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+h2.upload-container {
+  margin-bottom: 15px;
+}
+.image-preview {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 auto 15px;
+  border: 2px dashed var(--secondary-color);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-preview img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.hidden {
+  display: none;
+}
+.custom-file-label {
+  display: inline block;
+  padding: 10px 20px;
+  background-color: var(--secondary-color);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+.custom-file-label:hover {
+  background-color: #606c38;
+}
+.input-profile {
+  display: none;
+}
