--- a/templates/auth.html
+++ b/templates/auth.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <style>
+    <!-- <style>
       .logout-button {
     background-color: #ff4d4d; /* Red color */
     color: white;
@@ -34,7 +34,7 @@
     background-color: #cc0000; /* Darker red on hover */
 }
 
-    </style>
+    </style> -->
     <nav class="navbar">
       <div class="navbar-logo">Al Noor Bootcamp</div>
       <div class="nav-links">
